# wham

./: .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  README.md  RELEASE.md  Snakefile  Snakemake  VCF2R  index.html  params.json
benchmarking/CHM1/: truth_delly.pl  truth_lumpy.pl  truth_wham.pl
benchmarking/PHASE3-1KG/: README  comp_truth_delly1kg.pl  comp_truth_lumpy1kg.pl  comp_truth_wham1kg.pl  estd214_1000_Genomes_Consortium_Phase_3.2014-10-13.GRCh37.p4.Submitted.NA12878.bedpe
benchmarking/SIMULATED-DATA/: truth_delly.pl  truth_lumpy.pl  truth_wham.pl
data/: README  WHAM_training_data.txt
docs/: github-figure.ai
lib/: randomregion.cpp  read_pileup.h
src/doxygen-info/: Doxyfile
src/lib/: JenksBreaks.h  KMERUTILS.h  alignHMM.h  cigar.hpp  dataStructures.hpp  entropy.cpp  entropy.cpp~  entropy.h  entropy.h~  fastonebigheader.h  flag.cpp  flag.h  gauss.c  gauss.h  gsl_math.h  join.hpp  phredUtils.h  randomregion.h  readPileUp.cpp  readPileUp.cpp~  readPileUp.h  readPileUp.h~  read_pileup.cpp  ssw.c  stats.hpp
test/: run-test.sh
test/data/: mut1_20-40k.bam.bai  mut2_20-40k.bam.bai  ref_20-40k.bam.bai
test/simulations/: Makefile  MakefileDEL  MakefileINS  Makefile~  generateSV.pl  generateSV.pl~  inv-5xsimA.sort.rmdup.chr22.bam.bai  processWHAMout.pl  runDel.sh  runIns.sh  scaffold612.fa  scaffold612.fa.2.bt2  scaffold612.fa.3.bt2  scaffold612.fa.4.bt2  scaffold612.fa.index  scaffold612.fa.rev.2.bt2
test/viralData/: mut1_20-40k.bam.bai  mut2_20-40k.bam.bai
utils/: README  Snakefile  WHAM_training_data.txt  WHAM_training_phase3_10bp_training.txt  classify_WHAM_vcf-parallel.py  classify_WHAM_vcf.py  dellyToBedPe.pl  deltaAfWham  filtWhamG.pl  filters.pl  gvfToBedPe.pl  human.hg19.build.txt  masker-README  quick_human.pl  whamToBed.pl  whamToBedPe.pl
